--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.2.13",
     "vue-echarts": "^6.0.2",
     "vue-echarts-v3": "^2.0.1",
+    "vue-next-select": "^2.10.2",
     "vue-router": "^4.0.12",
     "vue3-charts": "^1.1.28"
   },
