--- a/abcVendedores/package.json
+++ b/abcVendedores/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "node-xlsx": "^0.21.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "underscore": "^1.13.2"
   }
 }
