--- a/abcVendedores/package.json
+++ b/abcVendedores/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "node-xlsx": "^0.21.0",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "underscore": "^1.13.2"
   }
